fix project card width on mobile

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -126,6 +126,9 @@
 
 /* For tablets and phones */
 @media screen and (max-width: 1024px) {
+  .container {
+    width: 95%;
+  }
   .grid {
     grid-template-columns: 1fr;
     gap: 1rem;
